Added home page and links between pages!

--- a/templates/confirm_new_student.html
+++ b/templates/confirm_new_student.html
@@ -10,5 +10,6 @@
 
 <p>Full Name: {{ firstname }} {{lastname}}</p>
 <p>GitHub Account: {{ github }}</p>
+<p><a href="/student?github={{github}}"> Click here to view info about the new student!</a></p>
 </body>
 </html>
