--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -7,5 +7,9 @@
 <h1>{{ first }} {{ last }}</h1>
 
 <p>GitHub Account: {{ github }}</p>
+<br><br>
+<p>To search for another student in the database <a href="/student-search">click here</a></p>
+<br><br>
+<p> <a href="/">Go Home! </a></p>
 </body>
 </html>
