list of all student grades on student information page -- in progress

--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -7,6 +7,9 @@
 <h1>{{ first }} {{ last }}</h1>
 
 <p>GitHub Account: {{ github }}</p>
+<br>
+<p> All {{github}}'s grades: <br>
+ <b> Projects: {{project_list}}<br> Grades: {{grade_list}}</b></p>
 <br><br>
 <p>To search for another student in the database <a href="/student-search">click here</a></p>
 <br><br>
